--- a/ForeScore.WebMVC/Views/Course/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Details.cshtml
@@ -39,47 +39,110 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-info">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Course Information</div>
                 <div class="panel-body">
-                    <dl class="dl-horizontal">
+                    <div class="col-lg-6">
+                        <dl class="dl-horizontal">
 
-                        @Html.HiddenFor(model => model.CourseId)
+                            @Html.HiddenFor(model => model.CourseId)
+                            <dt>
+                                Course Name:
+                            </dt>
 
-                        <dt>
-                            Course Name:
-                        </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.Name)
+                            </dd>
 
-                        <dd>
-                            @Html.DisplayFor(model => model.Name)
-                        </dd>
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Par):
+                            </dt>
 
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Par):
-                        </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.Par)
+                            </dd>
 
-                        <dd>
-                            @Html.DisplayFor(model => model.Par)
-                        </dd>
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Slope):
+                            </dt>
 
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Slope):
-                        </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.Slope)
+                            </dd>
 
-                        <dd>
-                            @Html.DisplayFor(model => model.Slope)
-                        </dd>
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Rating):
+                            </dt>
 
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Rating):
-                        </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.Rating)
+                            </dd>
 
-                        <dd>
-                            @Html.DisplayFor(model => model.Rating)
-                        </dd>
-                    </dl>
+                            <dt>
+                                @Html.DisplayNameFor(model => model.City):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.City)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.StateOfResidence):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.StateOfResidence)
+                            </dd>
+
+                        </dl>
+                    </div>
+                    <div class="col-lg-6">
+                        <dl>
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Address):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Address)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.ZipCode):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.ZipCode)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.PhoneNumber):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.PhoneNumber)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.EmailAddress):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.EmailAddress)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Website):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Website)
+                            </dd>
+                        </dl>
+
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
 
@@ -180,73 +243,6 @@
                         </tbody>
 
                     </table>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-info">
-                <div class="panel-heading">Contact Information</div>
-                <div class="panel-body">
-                    <dl class="dl-horizontal">
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Address):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Address)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.City):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.City)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.StateOfResidence):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.StateOfResidence)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.ZipCode):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.ZipCode)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.PhoneNumber):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.PhoneNumber)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.EmailAddress):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.EmailAddress)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Website):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Website)
-                        </dd>
-
-                    </dl>
                 </div>
             </div>
         </div>
