--- a/ForeScore.WebMVC/Views/Round/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Delete.cshtml
@@ -35,7 +35,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-info">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Course Information</div>
                 <div class="panel-body">
                     <div class="col-lg-6">
@@ -119,7 +119,7 @@
     <br />
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-warning">
+            <div class="panel panel-danger">
                 <div class="panel-heading">Round Information</div>
                 <div class="panel-body form-horizontal">
                     <div class="form-group">
@@ -160,7 +160,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-primary">
+            <div class="panel panel-danger">
                 <div class="panel-heading">Front Nine</div>
                 <div class="panel-body">
                     <table class="table table-bordered table-striped">
@@ -278,7 +278,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-primary">
+            <div class="panel panel-danger">
                 <div class="panel-heading">Back Nine</div>
                 <div class="panel-body">
                     <table class="table table-bordered table-striped">
