--- a/ForeScore.WebMVC/Views/Round/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Details.cshtml
@@ -51,7 +51,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-info">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Course Information</div>
                 <div class="panel-body">
                     <div class="col-lg-6">
@@ -135,7 +135,7 @@
     <br />
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-warning">
+            <div class="panel panel-primary">
                 <div class="panel-heading">Round Information</div>
                 <div class="panel-body form-horizontal">
                     <div class="form-group">
