--- a/ForeScore.WebMVC/Views/Round/Edit.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Edit.cshtml
@@ -22,7 +22,7 @@
             <div class=" col-lg-2"></div>
             <div class="col-lg-5">
 
-                <button type="submit" value="Save" class="btn btn-block btn-success col-lg-2">Edit Round</button>
+                <button type="submit" value="Save" class="btn btn-block btn-warning col-lg-2">Edit Round</button>
 
             </div>
         </div>
@@ -32,7 +32,7 @@
         @Html.HiddenFor(model => model.CourseDetail.CourseId)
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-info">
+                <div class="panel panel-primary">
                     <div class="panel-heading">Course Information</div>
                     <div class="panel-body">
                         <div class="col-lg-6">
@@ -162,7 +162,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-primary">
+                <div class="panel panel-warning">
                     <div class="panel-heading">Front Nine</div>
                     <div class="panel-body">
                         <table class="table table-bordered table-striped">
@@ -284,7 +284,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-primary">
+                <div class="panel panel-warning">
                     <div class="panel-heading">Back Nine</div>
                     <div class="panel-body">
                         <table class="table table-bordered table-striped">
